--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer py-4">
-  <div class="container text-center py-3"><span class="text-muted">&copy; All rights reserved. </span><a class="nav-link d-inline fw-normal p-0" href="{{site.url}}" target="_blank" rel="noopener">{{site.name}}</a></div>
+  <div class="container text-center py-3 align-middle"><span class="text-muted">&copy; All rights reserved. </span><a class="nav-link d-inline fw-normal p-0" href="{{site.url}}" target="_blank" rel="noopener"><img src="{{site.logo}}" class="img-fluid w-8"/></a></div>
 </footer>
 <!-- Back to top button--><a class="btn-scroll-top" href="#top" data-scroll>
   <svg viewBox="0 0 40 40" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
