--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,222 +1,56 @@
-  <!-- Navbar. Remove 'fixed-top' class to make the navigation bar scrollable with the page -->
+{%- comment -%}
+  Simple Bootstrap navbar driven by _data/nav.yml
+  Optional: set site.logo (path/URL) in _config.yml
+{%- endcomment -%}
+
 <header class="navbar navbar-expand-lg fixed-top" data-bs-theme="light">
   <div class="container">
 
-    <!-- Navbar brand (Logo) -->
-    <a class="navbar-brand pe-sm-3" href="/">
-      <img src="assets/img/DIG-Logo.avif" class="img-fluid w-50"/>
+    <!-- Brand -->
+    <a class="navbar-brand pe-sm-3" href="{{ '/' | relative_url }}">
+      {%- if site.logo -%}
+        <img src="{{ site.logo | relative_url }}" class="img-fluid w-50" alt="{{ site.title | escape }}">
+      {%- else -%}
+        {{ site.title }}
+      {%- endif -%}
     </a>
 
-
-    <!-- Mobile menu toggler (Hamburger) -->
-    <button class="navbar-toggler ms-sm-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-label="Toggle navigation">
+    <!-- Mobile toggler -->
+    <button class="navbar-toggler ms-sm-3" type="button"
+            data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-label="Toggle navigation" aria-controls="navbarNav" aria-expanded="false">
       <span class="navbar-toggler-icon"></span>
     </button>
 
-    <!-- Navbar collapse (Main navigation) -->
+    <!-- Links -->
     <nav class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav navbar-nav-scroll ms-auto" style="--ar-scroll-height: 520px;">
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle active" href="#" data-bs-toggle="dropdown" aria-expanded="false">Landings</a>
-          <div class="dropdown-menu overflow-hidden p-0" data-bs-theme="light">
-            <div class="d-lg-flex">
-              <div class="mega-dropdown-column pt-1 pt-lg-3 pb-lg-4">
-                <ul class="list-unstyled mb-0">
-                  <li>
-                    <a class="dropdown-item" href="index.html">Template Intro Page</a>
-                    <span class="mega-dropdown-column position-absolute top-0 end-0 h-100 bg-size-cover bg-repeat-0 rounded-3 rounded-start-0" style="background-image: url(assets/img/megamenu/landings.jpg);"></span>
-                  </li>
-                  <li>
-                    <a class="dropdown-item" href="landing-mobile-app-showcase.html">Mobile App Showcase</a>
-                    <span class="mega-dropdown-column position-absolute top-0 end-0 h-100 bg-size-cover bg-repeat-0 z-2 opacity-0" style="background-image: url(assets/img/megamenu/mobile-app.jpg);"></span>
-                  </li>
-                  <li>
-                    <a class="dropdown-item" href="landing-product.html">Product Landing</a>
-                    <span class="mega-dropdown-column position-absolute top-0 end-0 h-100 bg-size-cover bg-repeat-0 z-2 opacity-0" style="background-image: url(assets/img/megamenu/product-landing.jpg);"></span>
-                  </li>
-                  <li>
-                    <a class="dropdown-item" href="landing-saas-v1.html">SaaS v.1</a>
-                    <span class="mega-dropdown-column position-absolute top-0 end-0 h-100 bg-size-cover bg-repeat-0 z-2 opacity-0" style="background-image: url(assets/img/megamenu/saas-1.jpg);"></span>
-                  </li>
-                  <li>
-                    <a class="dropdown-item" href="landing-saas-v2.html">SaaS v.2</a>
-                    <span class="mega-dropdown-column position-absolute top-0 end-0 h-100 bg-size-cover bg-repeat-0 z-2 opacity-0" style="background-image: url(assets/img/megamenu/saas-2.jpg);"></span>
-                  </li>
-                  <li>
-                    <a class="dropdown-item" href="landing-saas-v3.html">SaaS v.3</a>
-                    <span class="mega-dropdown-column position-absolute top-0 end-0 h-100 bg-size-cover bg-repeat-0 z-2 opacity-0" style="background-image: url(assets/img/megamenu/saas-3.jpg);"></span>
-                  </li>
-                  <li>
-                    <a class="dropdown-item" href="landing-saas-v4.html">
-                      SaaS v.4
-                      <span class="text-danger fs-xs ms-2">New</span>
-                    </a>
-                    <span class="mega-dropdown-column position-absolute top-0 end-0 h-100 bg-size-cover bg-repeat-0 z-2 opacity-0" style="background-image: url(assets/img/megamenu/saas-4.jpg);"></span>
-                  </li>
-                  <li>
-                    <a class="dropdown-item" href="landing-shop-v1.html">Shop Homepage v.1</a>
-                    <span class="mega-dropdown-column position-absolute top-0 end-0 h-100 bg-size-cover bg-repeat-0 z-2 opacity-0" style="background-image: url(assets/img/megamenu/shop-homepage-1.jpg);"></span>
-                  </li>
-                  <li>
-                    <a class="dropdown-item" href="landing-shop-v2.html">
-                      Shop Homepage v.2
-                      <span class="text-danger fs-xs ms-2">New</span>
-                    </a>
-                    <span class="mega-dropdown-column position-absolute top-0 end-0 h-100 bg-size-cover bg-repeat-0 z-2 opacity-0" style="background-image: url(assets/img/megamenu/shop-homepage-2.jpg);"></span>
-                  </li>
-                  <li>
-                    <a class="dropdown-item" href="landing-marketing-agency.html">Marketing Agency</a>
-                    <span class="mega-dropdown-column position-absolute top-0 end-0 h-100 bg-size-cover bg-repeat-0 z-2 opacity-0" style="background-image: url(assets/img/megamenu/marketing-agency.jpg);"></span>
-                  </li>
-                </ul>
-              </div>
-              <div class="mega-dropdown-column pb-2 pt-lg-3 pb-lg-4">
-                <ul class="list-unstyled mb-0">
-                  <li>
-                    <a class="dropdown-item" href="landing-creative-agency.html">Creative Agency</a>
-                    <span class="mega-dropdown-column position-absolute top-0 end-0 h-100 bg-size-cover bg-repeat-0 z-2 opacity-0" style="background-image: url(assets/img/megamenu/creative-agency.jpg);"></span>
-                  </li>
-                  <li>
-                    <a class="dropdown-item" href="landing-conference.html">Conference (Event)</a>
-                    <span class="mega-dropdown-column position-absolute top-0 end-0 h-100 bg-size-cover bg-repeat-0 z-2 opacity-0" style="background-image: url(assets/img/megamenu/conference.jpg);"></span>
-                  </li>
-                  <li>
-                    <a class="dropdown-item" href="landing-web-studio.html">Web Studio</a>
-                    <span class="mega-dropdown-column position-absolute top-0 end-0 h-100 bg-size-cover bg-repeat-0 z-2 opacity-0" style="background-image: url(assets/img/megamenu/web-studio.jpg);"></span>
-                  </li>
-                  <li>
-                    <a class="dropdown-item" href="landing-corporate.html">Corporate</a>
-                    <span class="mega-dropdown-column position-absolute top-0 end-0 h-100 bg-size-cover bg-repeat-0 z-2 opacity-0" style="background-image: url(assets/img/megamenu/corporate.jpg);"></span>
-                  </li>
-                  <li>
-                    <a class="dropdown-item" href="landing-insurance.html">
-                      Insurance Company
-                      <span class="text-danger fs-xs ms-2">New</span>
-                    </a>
-                    <span class="mega-dropdown-column position-absolute top-0 end-0 h-100 bg-size-cover bg-repeat-0 z-2 opacity-0" style="background-image: url(assets/img/megamenu/insurance.jpg);"></span>
-                  </li>
-                  <li>
-                    <a class="dropdown-item" href="landing-business-consulting.html">Business Consulting</a>
-                    <span class="mega-dropdown-column position-absolute top-0 end-0 h-100 bg-size-cover bg-repeat-0 z-2 opacity-0" style="background-image: url(assets/img/megamenu/business-consulting.jpg);"></span>
-                  </li>
-                  <li>
-                    <a class="dropdown-item" href="landing-coworking-space.html">Coworking Space</a>
-                    <span class="mega-dropdown-column position-absolute top-0 end-0 h-100 bg-size-cover bg-repeat-0 z-2 opacity-0" style="background-image: url(assets/img/megamenu/coworking.jpg);"></span>
-                  </li>
-                  <li>
-                    <a class="dropdown-item" href="landing-yoga-studio.html">Yoga Studio</a>
-                    <span class="mega-dropdown-column position-absolute top-0 end-0 h-100 bg-size-cover bg-repeat-0 z-2 opacity-0" style="background-image: url(assets/img/megamenu/yoga-studio.jpg);"></span>
-                  </li>
-                  <li>
-                    <a class="dropdown-item" href="landing-influencer.html">Influencer</a>
-                    <span class="mega-dropdown-column position-absolute top-0 end-0 h-100 bg-size-cover bg-repeat-0 z-2 opacity-0" style="background-image: url(assets/img/megamenu/influencer.jpg);"></span>
-                  </li>
-                  <li>
-                    <a class="dropdown-item" href="landing-blog.html">Blog Homepage</a>
-                    <span class="mega-dropdown-column position-absolute top-0 end-0 h-100 bg-size-cover bg-repeat-0 z-2 opacity-0" style="background-image: url(assets/img/megamenu/blog-homepage.jpg);"></span>
-                  </li>
-                </ul>
-              </div>
-              <div class="mega-dropdown-column position-relative border-start z-3"></div>
-            </div>
-          </div>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">Pages</a>
-          <ul class="dropdown-menu" data-bs-theme="light">
-            <li class="dropdown">
-              <a class="dropdown-item dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Portfolio</a>
-              <ul class="dropdown-menu" data-bs-theme="light">
-                <li><a class="dropdown-item" href="portfolio-list-v1.html">List View v.1</a></li>
-                <li><a class="dropdown-item" href="portfolio-list-v2.html">List View v.2</a></li>
-                <li><a class="dropdown-item" href="portfolio-grid-v1.html">Grid View v.1</a></li>
-                <li><a class="dropdown-item" href="portfolio-grid-v2.html">Grid View v.2</a></li>
-                <li><a class="dropdown-item" href="portfolio-slider.html">Slider View</a></li>
-                <li><a class="dropdown-item" href="portfolio-single-v1.html">Single Project v.1</a></li>
-                <li><a class="dropdown-item" href="portfolio-single-v2.html">Single Project v.2</a></li>
-              </ul>
-            </li>
-            <li class="dropdown">
-              <a class="dropdown-item dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Shop</a>
-              <ul class="dropdown-menu" data-bs-theme="light">
-                <li><a class="dropdown-item" href="shop-catalog.html">Catalog (Listing)</a></li>
-                <li><a class="dropdown-item" href="shop-single.html">Product Page</a></li>
-                <li><a class="dropdown-item" href="shop-checkout.html">Checkout</a></li>
-              </ul>
-            </li>
-            <li class="dropdown">
-              <a class="dropdown-item dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Blog</a>
-              <ul class="dropdown-menu" data-bs-theme="light">
-                <li><a class="dropdown-item" href="blog-grid-sidebar.html">Grid View with Sidebar</a></li>
-                <li><a class="dropdown-item" href="blog-grid.html">Grid View no Sidebar</a></li>
-                <li><a class="dropdown-item" href="blog-list-sidebar.html">List View with Sidebar</a></li>
-                <li><a class="dropdown-item" href="blog-list.html">List View no Sidebar</a></li>
-                <li><a class="dropdown-item" href="blog-single-v1.html">Single post v.1</a></li>
-                <li><a class="dropdown-item" href="blog-single-v2.html">Single post v.2</a></li>
-                <li><a class="dropdown-item" href="blog-single-v3.html">Single post v.3</a></li>
-              </ul>
-            </li>
-            <li class="dropdown">
-              <a class="dropdown-item dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">About</a>
-              <ul class="dropdown-menu" data-bs-theme="light">
-                <li><a class="dropdown-item" href="about-agency.html">About - Agency</a></li>
-                <li><a class="dropdown-item" href="about-product.html">About - Product</a></li>
-              </ul>
-            </li>
-            <li class="dropdown">
-              <a class="dropdown-item dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Services</a>
-              <ul class="dropdown-menu" data-bs-theme="light">
-                <li><a class="dropdown-item" href="services-v1.html">Services v.1</a></li>
-                <li><a class="dropdown-item" href="services-v2.html">Services v.2</a></li>
-                <li><a class="dropdown-item" href="services-v3.html">Services v.3</a></li>
-              </ul>
-            </li>
-            <li><a class="dropdown-item" href="pricing.html">Pricing</a></li>
-            <li class="dropdown">
-              <a class="dropdown-item dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Contacts</a>
-              <ul class="dropdown-menu" data-bs-theme="light">
-                <li><a class="dropdown-item" href="contacts-v1.html">Contacts v.1</a></li>
-                <li><a class="dropdown-item" href="contacts-v2.html">Contacts v.2</a></li>
-                <li><a class="dropdown-item" href="contacts-v3.html">Contacts v.3</a></li>
-              </ul>
-            </li>
-            <li class="dropdown">
-              <a class="dropdown-item dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Specialty Pages</a>
-              <ul class="dropdown-menu" data-bs-theme="light">
-                <li><a class="dropdown-item" href="coming-soon-v1.html">Coming Soon v.1</a></li>
-                <li><a class="dropdown-item" href="coming-soon-v2.html">Coming Soon v.2</a></li>
-                <li><a class="dropdown-item" href="404-v1.html">404 Error v.1</a></li>
-                <li><a class="dropdown-item" href="404-v2.html">404 Error v.2</a></li>
-                <li><a class="dropdown-item" href="404-v3.html">404 Error v.3</a></li>
-              </ul>
-            </li>
-          </ul>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">Account</a>
-          <ul class="dropdown-menu" data-bs-theme="light">
-            <li class="dropdown">
-              <a class="dropdown-item dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Auth pages</a>
-              <ul class="dropdown-menu" data-bs-theme="light">
-                <li><a class="dropdown-item" href="account-signin.html">Sign In</a></li>
-                <li><a class="dropdown-item" href="account-signup.html">Sign Up</a></li>
-                <li><a class="dropdown-item" href="account-signinup.html">Sign In / Up</a></li>
-                <li><a class="dropdown-item" href="account-password-recovery.html">Password Recovery</a></li>
-              </ul>
-            </li>
-            <li><a class="dropdown-item" href="account-overview.html">Overview</a></li>
-            <li><a class="dropdown-item" href="account-settings.html">Settings</a></li>
-            <li><a class="dropdown-item" href="account-billing.html">Billing</a></li>
-            <li><a class="dropdown-item" href="account-orders.html">Orders</a></li>
-            <li><a class="dropdown-item" href="account-earnings.html">Earnings</a></li>
-            <li><a class="dropdown-item" href="account-chat.html">Chat (Messages)</a></li>
-            <li><a class="dropdown-item" href="account-favorites.html">Favorites (Wishlist)</a></li>
-          </ul>
-        </li>
 
+        {%- assign current = page.url | replace: 'index.html','' -%}
+        {%- for item in site.data.nav -%}
+          {%- assign href = item.url | default: '#' -%}
+          {%- assign href_norm = href | append: '' -%}
+          {%- comment -%}
+            Active state:
+            - exact match
+            - or current starts with href (for section roots like /about/)
+          {%- endcomment -%}
+          {%- assign is_active = false -%}
+          {%- if current == href or current == href | append: '/' -%}
+            {%- assign is_active = true -%}
+          {%- elsif href != '/' and current != '/' and current contains href -%}
+            {%- assign is_active = true -%}
+          {%- endif -%}
 
-       </ul>
+          <li class="nav-item">
+            <a class="nav-link{% if is_active %} active{% endif %}"
+               href="{{ href | relative_url }}">
+              {{ item.name }}
+            </a>
+          </li>
+        {%- endfor -%}
 
+      </ul>
     </nav>
   </div>
 </header>
