add more content

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -23,6 +23,7 @@
 <meta name="msapplication-TileColor" content="#ffffff">
 <meta name="msapplication-TileImage" content="/assets/favicon/ms-icon-144x144.png">
 <meta name="theme-color" content="#ffffff">
+<script src="https://kit.fontawesome.com/c6b545e3a9.js" crossorigin="anonymous"></script>
  <!-- Page loading styles -->
 <style>
   .page-loading {
